@@ -1,4 +1,5 @@
 Sigil v0.3.0RC1 ADD_DATE
+    - fixed a problem with opening files from the Ubuntu "Open With" menu (issue #524)
     - made Tidy handle common user errors like "&co." in the HTML source instead of "&amp;co."
     - fixed a rare Tidy bug with dissapearing spaces when the only whitespace in an element was 
     the newline following a start tag (issue #387)
